So systemd prepends localtime for us anyway
Only do something cleverer if other daemon handlers don't. And
then try to do it in the config rather than smib.pl.

--- a/smib.service.example
+++ b/smib.service.example
@@ -1,3 +1,6 @@
+# Service file for use with systemd
+# Configure your options and copy this file to /etc/systemd/system/smib.service
+# Output will be sent to syslog
 [Unit]
 Description=So Make It Bot
 After=network.target
